[package]
name = "mlb-client"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.2.9"

[dev-dependencies]
tokio = { version = "0.2.16", features = ["macros"] }
