[package]
name = "mlb-client"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
time = "0.2.16"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
