[package]
name = "take-home"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"

[dependencies]
client = { package = 'mlb-client',  path = '../mlb-client' }

futures = "0.3.5"
parking_lot = "0.11.0"
sdl2 = { version = "0.34.2", features = ["image", "ttf"] }
time = "0.2.16"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "fs"] }
